feat: added hackerrank and X

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -21,9 +21,13 @@ params:
         url: "https://www.buymeacoffee.com/divineforge"
 
   socialIcons: # optional
-    - name: "LinkedIn"
-      url: "https://linkedin.com/in/cheongweelau"
-    - name: "Github"
-      url: "https://github.com/divineforge"
-    - name: "buymeacoffee"
-      url: "https://www.buymeacoffee.com/divineforge"
+  - name: "x"
+    url: "https://x.com/divineforge"
+  - name: "LinkedIn"
+    url: "https://linkedin.com/in/cheongweelau"
+  - name: "Github"
+    url: "https://github.com/divineforge"
+  - name: "buymeacoffee"
+    url: "https://www.buymeacoffee.com/divineforge"
+  - name: "hackerrank"
+    url: "https://www.hackerrank.com/cheongweelau"
