--- a/hugo.yaml
+++ b/hugo.yaml
@@ -39,3 +39,9 @@ params:
     url: "https://x.com/divineforge"
   - name: "hackerrank"
     url: "https://www.hackerrank.com/cheongweelau"
+
+  assets:
+    favicon: "favicon.ico"
+    favicon16x16: "favicon-16x16.png"
+    favicon32x32: "favicon-32x32.png"
+    apple_touch_icon: "apple-touch-icon.png"
