--- a/hugo.yaml
+++ b/hugo.yaml
@@ -25,8 +25,8 @@ params:
         url: "https://blog.divineforge.com"
       - name: "Buy Me a Drink ;)"
         url: "https://www.buymeacoffee.com/divineforge"
-      # - name: "(Open) Divineforge GitHub"
-        # url: https://github.com/dvfx-io
+      - name: "Extra Discount Voucher for CompAsia Used Device Purchase"
+        url: "https://compasiamalaysia.refr.cc/campaign-25/u/cheongweelau?s=sp&t=cp"
 
   socialIcons: # optional
   - name: "dev"
